--- a/Chudnovsky/Chudnovsky.vcxproj.filters
+++ b/Chudnovsky/Chudnovsky.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="executiontimer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\mpreal.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
